Mobile app section added with its own folders and "startup" files inside

--- a/mobile-apps/mobile-contact/mobile-contact.html
+++ b/mobile-apps/mobile-contact/mobile-contact.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
-  <title>UX Library - Mobile Apps</title>
+  <title>UX Library - Mobile apps</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
@@ -37,27 +37,19 @@
             <sub-navigation caption="Mobile Apps">
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentaion</nav-item>
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
-              <nav-item location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contact.html">Contact us</nav-item>
+              <nav-item class="active" location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contacts.html">Contact us</nav-item>
             </sub-navigation>
-        </nav-item>
+          </nav-item>
       </primary-items>
     </c-main-navigation>
 
     <!-- Content -->
     <section class="light">
       <article>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1>Mobile Applications</h1>
-              <p>Developing a native mobile application differs from developing for the web. Therefore we currently only provide additional guidelines and Phototshop templates for projects working with mobile solutions.</p>
-              <h3>Guidelines and Templates</h3>
-              <p>In conjunction to the
-                <a href="/corporate-ui-docs/styleguide/Scania Identity Manual_201609.pdf" target="_blank">Scania Identity Manual</a>, principles for applying the brand assets in mobile applications have been developed. To ensure a strong unified global brand identity, please use the
-                <a href="/corporate-ui-docs/mobile-apps/styleguide-for-apps.pdf" target="_blank">Mobile Application Style Guide</a>. Logotypes, icons and font files may be downloaded via the UX library style guide. There are also templates available for
-                <a href="/corporate-ui-docs/mobile-apps/templates/splash-screen/splash-screen-templates.zip">Splash Screens</a> and <a href="/corporate-ui-docs/mobile-apps/templates/app-icons/app-icon-templates.zip">App Icons</a>.
-              </p>
-              <p>To get the Scania Sans fonts for app development, <a href="mailto:corporate-ui@scania.com">please make an e-mail request</a> and we'll send them to you.</p>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>Mobile contact</h1>
             </div>
           </div>
         </div>
