--- a/mobile-apps/mobile-example/mobile-example.html
+++ b/mobile-apps/mobile-example/mobile-example.html
@@ -35,6 +35,7 @@
           <nav-item location="/corporate-ui-docs/developer/">Web Applications</nav-item>
           <nav-item location="/corporate-ui-docs/mobile-apps/" class="active">Mobile Apps
             <sub-navigation caption="Mobile Apps">
+              <nav-item location="/corporate-ui-docs/mobile-apps/">Overview</nav-item>
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentaion</nav-item>
               <nav-item class="active" location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contact.html">Contact us</nav-item>
@@ -49,7 +50,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1>Mobile Documentation</h1>
+              <h1>Mobile Example</h1>
             </div>
           </div>
         </div>
