--- a/mobile-apps/index.html
+++ b/mobile-apps/index.html
@@ -35,6 +35,7 @@
           <nav-item location="/corporate-ui-docs/developer/">Web Applications</nav-item>
           <nav-item location="/corporate-ui-docs/mobile-apps/" class="active">Mobile Apps
             <sub-navigation caption="Mobile Apps">
+              <nav-item class="active" location="/corporate-ui-docs/mobile-apps/index.html">Overview</nav-item>
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentaion</nav-item>
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contact.html">Contact us</nav-item>
@@ -46,18 +47,11 @@
     <!-- Content -->
     <section class="light">
       <article>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1>Mobile Applications</h1>
-              <p>Developing a native mobile application differs from developing for the web. Therefore we currently only provide additional guidelines and Phototshop templates for projects working with mobile solutions.</p>
-              <h3>Guidelines and Templates</h3>
-              <p>In conjunction to the
-                <a href="/corporate-ui-docs/styleguide/Scania Identity Manual_201609.pdf" target="_blank">Scania Identity Manual</a>, principles for applying the brand assets in mobile applications have been developed. To ensure a strong unified global brand identity, please use the
-                <a href="/corporate-ui-docs/mobile-apps/styleguide-for-apps.pdf" target="_blank">Mobile Application Style Guide</a>. Logotypes, icons and font files may be downloaded via the UX library style guide. There are also templates available for
-                <a href="/corporate-ui-docs/mobile-apps/templates/splash-screen/splash-screen-templates.zip">Splash Screens</a> and <a href="/corporate-ui-docs/mobile-apps/templates/app-icons/app-icon-templates.zip">App Icons</a>.
-              </p>
-              <p>To get the Scania Sans fonts for app development, <a href="mailto:corporate-ui@scania.com">please make an e-mail request</a> and we'll send them to you.</p>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>Mobile Overview</h1>
+              <!-- Add content -->
             </div>
           </div>
         </div>
