WIP Mobile Apps Section

--- a/mobile-apps/index.html
+++ b/mobile-apps/index.html
@@ -50,8 +50,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1>Mobile Overview</h1>
-              <!-- Add content -->
+              <h1>Mobile Applications</h1>
+              <p>How an App should be built by following both Scania Corporate UI Guidelines and Android Material Design Guidelines.</p>
             </div>
           </div>
         </div>
