--- a/mobile-apps/mobile-contact/mobile-contact.html
+++ b/mobile-apps/mobile-contact/mobile-contact.html
@@ -50,7 +50,12 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1>Mobile contact</h1>
+              <center><h1>We've got your back</h1></center>
+              <p>Can't find what you needed in our documentation section? Get in touch with a friendly member of our team.</p>
+              <p><button>EMAIL US</button> at cs.appsupport@scania.com</p>
+              <p>We will get back to you as soon as we can.</p>
+              <h2>Note: Scope of our support is Limited.</h2>
+              <p>We can help you with many tasks, such as resolving the clarifications on the documentation provided, but some questions are out of scope, like helping you write or debug code or consulting requests. Here's a summary of the types of tasks we can help with, and also the ones we can't. Technical questions about incorporating Scania Corporate UI Guidelines within the app. We can give you advice, but not detailed code. Questions about a method or feature isn't working as documented/expected. We can help if you have a reliable example that shows the problem. We provide full support in English. Non-English cases have limited support and exclude troubleshooting requests.</p>
             </div>
           </div>
         </div>
