--- a/mobile-apps/mobile-docs/mobile-docs.html
+++ b/mobile-apps/mobile-docs/mobile-docs.html
@@ -50,7 +50,165 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1>Mobile Documentation</h1>
+              <center><h1>Scania Demo App</h1></center>
+              <h2>Bottom Navigation View</h2>
+              <p>Bottom navigation bars allow movement between primary destinations in an app.</p>
+              <img src = "../../images/Scania_Demo_App_1.JPG" alt="Bottom Navigation View" style="width:25%;height:25%;">
+              <h5>Usage</h5>
+              <p>Bottom navigation bars display three to five destinations at the bottom of a screen. Each destination is represented by an icon and an optional text label. When a bottom navigation icon is tapped, the user is taken to the top-level navigation destination associated with that icon.</p>
+              <ul>
+                <li>When used, the bottom navigation bar appears at the bottom of every screen.</li>
+                <li>Bottom navigation bar destinations should be of equal importance. </li>
+              </ul>
+              <h5>Bottom navigation should be used for</h5>
+              <ul>
+                <li>Top-level destinations that need to be accessible from anywhere in the app</li>
+                <li>Three to five destinations</li>
+              </ul>
+              <h5>Bottom navigation shouldn’t be used for</h5>
+              <ul>
+                <li>Single tasks, such as viewing a single email</li>
+                <li>User preferences or settings</li>
+                <li>Fewer than three destinations (use tabs instead)</li>
+                <li>More than five destinations. For those cases, try tabs or a navigation drawer</li>
+              </ul>
+              <h5>Bottom Navigation destinations</h5>
+              <p>The way bottom navigation destinations are represented can depend on how many are used:</p>
+              <ul>
+                  <li><b>Three destinations:</b> Display icons and text labels for all destinations.</li>
+                  <li><b>Four destinations:</b> Active destinations display an icon and text label. Inactive destinations display icons, and text labels are recommended.</li>
+                  <li><b>Five destinations:</b> Active destinations display an icon and text label. Inactive destinations use icons and use text labels if space permits.</li>
+              </ul>
+              <h5>Bottom Navigation Icons</h5>
+              <p>Bottom navigation destinations always include an icon. It’s best to pair icons with text labels, especially if the icon doesn’t have obvious meaning.</p>
+              <h5>Text Labels</h5>
+              <p>Text labels provide short, meaningful descriptions of bottom navigation destinations.</p>
+              <ul>
+                  <li>Don’t truncate text. The truncation may obscure important destination information.</li>
+                  <li>Don’t shrink text to fit on a single line.</li>
+                  <li>Avoid wrapping text.</li>
+              </ul>
+              <h5>Transitions</h5>
+              <p>An in-place cross-fade animation is recommended for transitions between bottom navigation destinations. Lateral (side-to-side) transitions may imply a peer relationship between the items that does.</p>
+              <ul>
+                  <li>Avoid using lateral motion to transition between views. Lateral motion is reserved for navigating between peers.</li>
+              </ul>
+              <h5>Bottom Navigation Color</h5>
+              <p>When a bottom navigation destination is active, color the icon and text label with the app’s primary color.</p>
+              <ul>
+                  <li>Use the app’s primary color <b>Scania Blue</b> to indicate an active destination.</li>
+                  <li>Avoid using different colored icons and text labels.</li>
+              </ul>
+              <h2>Navigation Drawer</h2>
+              <p>Navigation drawers use a scrim to block interaction with the rest of an app’s content. They are elevated above most app elements and don’t affect the screen’s layout grid.</p>
+              <p>They are primarily for use on mobile, where screen space is limited. They can be replaced by standard drawers on tablet and desktop.</p>
+              <img src = "../../images/Scania_Demo_App_2.JPG" alt="Navigation Drawer" style="width:25%;height:25%;">
+              <h5>Usage</h5>
+              <p>Navigation drawers provide access to destinations and app functionality, such as switching accounts. They can either be permanently on-screen or controlled by a navigation menu icon.</p>
+              <h5>Navigation drawers are recommended for</h5>
+              <ul>
+                <li>Apps with five or more top-level destinations</li>
+                <li>Apps with two or more levels of navigation hierarchy</li>
+                <li>Quick navigation between unrelated destinations</li>
+              </ul>
+              <h5>Note</h5>
+              <p>Avoid using a navigation drawer with other primary navigation components, such as a bottom navigation bar.</p>
+              <h5>Principles of Navigation Drawer</h5>
+              <ul>
+                  <li>The placement and list-style content of navigation drawers clearly identify them as navigation.</li>
+                  <li>Navigation drawers order destinations according to user importance, with frequent destinations first and related ones grouped together.</li>
+                  <li>Navigation drawers can be shown or hidden to accommodate different app layouts.</li>
+              </ul>
+              <h5>Destinations</h5>
+              <p>Destinations in a navigation drawer take the form of actionable list items.</p>
+              <h5>Destination labels</h5>
+              <p>Text labels should be clear and short enough that they aren’t cut off by the sheet.</p>
+              <ul>
+                  <li>Keep text labels concise but truncate them if they extend beyond the container width.</li>
+                  <li>Don’t wrap label text.</li>
+                  <li>Don’t shrink text size to fit a text label on a single line.</li>
+              </ul>
+              <h5>Navigation Drawer Icons</h5>
+              <p>Icons can supplement labels as indicators of a destination. When used, they should always be placed before text. Other app components and content should reference these icons.</p>
+              <ul>
+                  <li>Use recognizable icons when conventions exist.</li>
+                  <li>Don’t use the same icon to represent different primary destinations.</li>
+                  <li>Don’t apply icons to some destinations and not others. Icons should be used for all destinations, or none.</li>
+                  <li>Don’t use dividers to separate individual destinations</li>
+                  <li>Use full-width dividers to separate groups of destinations.</li>
+              </ul>
+              <h2>Navigation Drawer Header </h2>
+              <p>The header area of a navigation drawer is a flexible space that can be used for brand expression (such as an app title or logo).</p>
+              <h5>Behaviour</h5>
+              <p>Navigation drawers can be vertically scrolled, independent of the rest of the screen’s content and UI. If the list of navigation destinations is longer than the destinations suitable to fit the screen, then they should be scrollable.</p>
+              <h5>Scrolling</h5>
+              <p>Navigation drawers can be vertically scrolled, independent of the rest of the screen’s content and UI. If the list of navigation destinations is longer than the height of the drawer, the drawer’s contents can be scrolled within the drawer.</p>
+              <h2>Tabs</h2>
+              <p>Tabs organize content across different screens, data sets, and other interactions.</p>
+              <img src = "../../images/Scania_Demo_App_3.JPG" alt="Tab Layout" style="width:25%;height:25%;">
+              <h5>Tab Principles</h5>
+              <ul>
+                  <li>As tabs can horizontally scroll, a UI can have as many tabs as needed.</li>
+                  <li>Tabs organize content into categories to help users easily find different types of information.</li>
+                  <li>Tabs are displayed next to each other as peers, in categories of equal importance</li>
+              </ul>
+              <h5>Active tab indicators</h5>
+              <p>To differentiate an active tab from an inactive tab, apply an underline <b>(Scania Red)</b> and color change <b>(Scania Blue)</b> to the active tab’s text and icon.</p>
+              <h5>Moving between tabs</h5>
+              <p>Users can navigate between tabs by tapping a tab, or by performing a swipe gesture over content. </p>
+              <h5>Tap a tab</h5>
+              <ul>
+                  <li>Navigate to a tab by tapping on it.</li>
+                  <li>Swipe within the content area.</li>
+                  <li>To navigate between tabs, users can swipe left or right within the content area.</li>
+              </ul>
+              <h5>Gestures occur differently for each type of tab:</h5>
+              <ul>
+                  <li>Fixed tabs don’t respond to the swipe gesture at all</li>
+                  <li>Upon swipe, scrollable tabs scroll independent of the content area</li>
+                  <li>Avoid placing swipeable items in the content area of a UI that has tabs, as the user may mistakenly swipe the wrong component.</li>
+              </ul>
+              <h5>Tab layout</h5>
+              <p>Tabs are displayed in a single row, with each tab connected to the content it represents. As a set, all tabs are unified by a shared topic.</p>
+              <ul>
+                  <li>Avoid nesting a tab within another tab.</li>
+                  <li>Don’t place tabs below one another.</li>
+                  <li>Don’t attach tabs to bottom navigation as it can cause confusion about what action or tab controls which content.</li>
+              </ul>
+              <h2>Lists</h2>
+              <p>Lists are continuous, vertical indexes of text or images.</p>
+              <img src = "../../images/Scania_Demo_App_4.JPG" alt="List View" style="width:25%;height:25%;">
+              <h5>Usage </h5>
+              <p>Lists are a continuous group of text or images. They are composed of items containing primary and supplemental actions, which are represented by icons and text.</p>
+              <ul>
+                  <li>Lists should be sorted in logical ways that make content easy to scan, such as alphabetical, numerical, chronological, or by user preference.</li>
+                  <li>Lists present content in a way that makes it easy to identify a specific item in a collection and act on it.</li>
+                  <li>Lists should present icons, text, and actions in a consistent format.</li>
+              </ul>
+              <h5>Dividers</h5>
+              <p>The structure of a list can be clarified using dividers.</p>
+              <h2>Profile Page</h2>
+              <img src = "../../images/Scania_Demo_App_5.JPG" alt="Profile Page" style="width:25%;height:25%;">
+              <h5>Usage</h5>
+              <p>A user profile has a set of default fields, such as email, phone number, and language. You can also extend the default user profile by adding custom fields that are specific to your business. </p>
+              <h5>Note</h5>
+              <p>The user profile should always follow the Scania Standard UI/UX Guidelines to meet the Goals of Scania Identity.</p>
+              <h2>Login Form</h2>
+              <img src = "../../images/Scania_Demo_App_6.JPG" alt="Login Form" style="width:25%;height:25%;">
+              <h5>Usage</h5>
+              <p>It is mandatory (Scania internal Apps) that you follow  the login form provided with this app if you application is intended to have Login/Logout. </p>
+              <h2>Splash Screen</h2>
+              <p>Splash Screen is often referred to a welcome screen or user’s first experience of an application. </p>
+              <h5>Usage</h5>
+              <p>Launch screens can be displayed upon an app’s launch from the home screen when an app loads, instead of displaying a blank screen. Displaying a launch screen can decrease the sense of a long load time, and has the potential to add delight to the user experience.</p>
+              <p>Launch screens shouldn’t be displayed if an app is running.</p>
+              <h5>Branded launch </h5>
+              <p>Branded launch screens express branding while an app loads, by displaying a logo or other elements that improve brand recognition. Avoid using text on this screen except your logo and, if applicable, a tagline.</p>
+              <p><b>Note:</b>The example Splash Screen with app info below is for the demo purpose and is not mandatory to have the splash screen as shown.</p>
+              <h5>Reference Material</h5>
+              <ul>1.Reference to Android Design Guidelines: https://material.io/</ul>
+              <ul>2.Reference to Splash Screen Design Guidelines: https://material.io/design/communication/launch-screen.html#</ul>
+              <ul>3.Reference to Android Testing Fundamentals : https://developer.android.com/training/testing/fundamentals</ul>
             </div>
           </div>
         </div>
