WIP adding images to example page

--- a/mobile-apps/mobile-docs/mobile-docs.html
+++ b/mobile-apps/mobile-docs/mobile-docs.html
@@ -199,6 +199,7 @@
               <p>It is mandatory (Scania internal Apps) that you follow  the login form provided with this app if you application is intended to have Login/Logout. </p>
               <h2>Splash Screen</h2>
               <p>Splash Screen is often referred to a welcome screen or user’s first experience of an application. </p>
+              <img src = "../../images/Scania_Demo_App_7.JPG" alt="Splash Screen" style="width:25%;height:25%;">
               <h5>Usage</h5>
               <p>Launch screens can be displayed upon an app’s launch from the home screen when an app loads, instead of displaying a blank screen. Displaying a launch screen can decrease the sense of a long load time, and has the potential to add delight to the user experience.</p>
               <p>Launch screens shouldn’t be displayed if an app is running.</p>
