--- a/mobile-apps/index.html
+++ b/mobile-apps/index.html
@@ -52,6 +52,9 @@
             <div class="col-md-12">
               <h1>Mobile Applications</h1>
               <p>How an App should be built by following both Scania Corporate UI Guidelines and Android Material Design Guidelines.</p>
+              <p>Developing a native mobile application differs from developing for the web. Therefore we currently only provide additional guidelines and Phototshop templates for projects working with mobile solutions.</p>
+              <h3>Guidelines and Templates</h3>
+              <p>In conjunction to the <a href="https://teamroom.scania.com/share/proxy/alfresco/slingshot/node/content/workspace/SpacesStore/f198d8a5-60af-4d92-9407-a43bcfe180b0/Scania%20Identity%20Manual_201609.pdf" target="_blank">Scania Identity Manual</a>, principles for applying the brand assets in mobile applications have been developed. To ensure a strong unified global brand identity, please use the <a href="/corporate-ui-docs/master-branch/mobile-apps/styleguide-for-apps.pdf" target="_blank">Mobile Application Style Guide</a>. Logotypes, icons and font files may be downloaded via the UX library style guide. There are also templates available for <a href="/corporate-ui-docs/master-branch/mobile-apps/templates/splash-screen/splash-screen-templates.zip">Splash Screens</a> and <a href="/corporate-ui-docs/master-branch/mobile-apps/templates/app-icons/app-icon-templates.zip">App Icons</a>.</p>
             </div>
           </div>
         </div>
