WIP Mobile Applications Page

--- a/mobile-apps/mobile-docs/mobile-docs.html
+++ b/mobile-apps/mobile-docs/mobile-docs.html
@@ -36,7 +36,7 @@
           <nav-item location="/corporate-ui-docs/mobile-apps/" class="active">Mobile Apps
             <sub-navigation caption="Mobile Apps">
               <nav-item location="/corporate-ui-docs/mobile-apps/index.html">Overview</nav-item>
-              <nav-item class="active" location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentaion</nav-item>
+              <nav-item class="active" location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentation</nav-item>
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contact.html">Contact us</nav-item>
             </sub-navigation>
@@ -207,9 +207,9 @@
               <p>Branded launch screens express branding while an app loads, by displaying a logo or other elements that improve brand recognition. Avoid using text on this screen except your logo and, if applicable, a tagline.</p>
               <p><b>Note:</b>The example Splash Screen with app info below is for the demo purpose and is not mandatory to have the splash screen as shown.</p>
               <h5>Reference Material</h5>
-              <ul>1.Reference to Android Design Guidelines: https://material.io/</ul>
-              <ul>2.Reference to Splash Screen Design Guidelines: https://material.io/design/communication/launch-screen.html#</ul>
-              <ul>3.Reference to Android Testing Fundamentals : https://developer.android.com/training/testing/fundamentals</ul>
+              <ul>1. Reference to Android Design Guidelines:<a href="#"> https://material.io/ </a></ul>
+              <ul>2. Reference to Splash Screen Design Guidelines:<a href="#"> https://material.io/design/communication/launch-screen.html# </a></ul>
+              <ul>3. Reference to Android Testing Fundamentals :<a href="#"> https://developer.android.com/training/testing/fundamentals </a></ul>
             </div>
           </div>
         </div>
