--- a/mobile-apps/mobile-contact/mobile-contact.html
+++ b/mobile-apps/mobile-contact/mobile-contact.html
@@ -36,7 +36,7 @@
           <nav-item location="/corporate-ui-docs/mobile-apps/" class="active">Mobile Apps
             <sub-navigation caption="Mobile Apps">
               <nav-item location="/corporate-ui-docs/mobile-apps/index.html">Overview</nav-item>
-              <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentaion</nav-item>
+              <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentation</nav-item>
               <nav-item location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
               <nav-item class="active" location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contacts.html">Contact us</nav-item>
             </sub-navigation>
@@ -52,10 +52,17 @@
             <div class="col-md-12">
               <center><h1>We've got your back</h1></center>
               <p>Can't find what you needed in our documentation section? Get in touch with a friendly member of our team.</p>
-              <p><button>EMAIL US</button> at cs.appsupport@scania.com</p>
+              <p>Please <a href="mailto:cs.appsupport@scania.com">send us an e-mail </a> at cs.appsupport@scania.com and we'll be happy to help out.</p>
               <p>We will get back to you as soon as we can.</p>
               <h2>Note: Scope of our support is Limited.</h2>
-              <p>We can help you with many tasks, such as resolving the clarifications on the documentation provided, but some questions are out of scope, like helping you write or debug code or consulting requests. Here's a summary of the types of tasks we can help with, and also the ones we can't. Technical questions about incorporating Scania Corporate UI Guidelines within the app. We can give you advice, but not detailed code. Questions about a method or feature isn't working as documented/expected. We can help if you have a reliable example that shows the problem. We provide full support in English. Non-English cases have limited support and exclude troubleshooting requests.</p>
+              <p>We can help you with many tasks, such as resolving the clarifications on the documentation provided, but some questions are out of scope. Like helping you write or debug code or consulting requests.</p>
+              <p>Here's a summary of the types of tasks we can help with, and also the ones we can't.</p>
+                 <ul>
+                   <li>Questions about incorporating Scania Corporate UI Guidelines within the app. We can give you advice, but not detailed code.</li>
+                   <li>Questions about a method or feature isn't working as documented/expected. We can help if you have a reliable example that shows the problem.</li>
+                   <li>We cannot help with the technical questions about Architecting the Mobile Applications and debugging the code.</li>
+                 </ul>
+              <p>We provide full support in English. Non-English cases have limited support and exclude troubleshooting requests.</p>
             </div>
           </div>
         </div>
