Links to source code and apk are added

--- a/mobile-apps/mobile-example/mobile-example.html
+++ b/mobile-apps/mobile-example/mobile-example.html
@@ -52,9 +52,9 @@
                 <div class="col-md-12">
                   <center><h1>Mobile Example</h1></center>
                   <h5>Android Native APK</h5>
-                    <p>To get your hands on the Scania Demo App, <a href="https://s3-eu-west-1.amazonaws.com/scaniademoapp/DemoApp.zip">click here</a> to download the apk</p>
+                    <p>To get your hands on the Scania Demo App, <a href="https://s3-eu-west-1.amazonaws.com/scaniademoapp/DemoApp_v1.1.zip">click here</a> to download the apk</p>
                   <h5>Source Code</h5>
-                    <p>To get your hands dirty by playing with the code, <a href="#">click here</a> to get to the source code</p>
+                    <p>To get your hands dirty by playing with the code, <a href="https://s3-eu-west-1.amazonaws.com/scaniademoappsourcecode/DemoAppSourceCode_v1.1.zip">click here</a> to get to the source code</p>
                     <p>Happy Coding!</p>
                     <div class="col-md-4"style=" margin-bottom: 5%;">
                       <div><h6>Bottom Navigation</h6> <img src = "../../images/Scania_Demo_App_1.JPG" alt="Bottom Navigation View" style="width: 75%"></div>
