No IOS Support and final reviewd documentation

--- a/mobile-apps/mobile-contact/mobile-contact.html
+++ b/mobile-apps/mobile-contact/mobile-contact.html
@@ -61,6 +61,7 @@
                    <li>Questions about incorporating Scania Corporate UI Guidelines within the app. We can give you advice, but not detailed code.</li>
                    <li>Questions about a method or feature isn't working as documented/expected. We can help if you have a reliable example that shows the problem.</li>
                    <li>We cannot help with the technical questions about Architecting the Mobile Applications and debugging the code.</li>
+                   <li>There is no support for IOS (APP or Screens) right now. Get started following Android UI and help will be provided for the UI part.</li>
                  </ul>
               <p>We provide full support in English. Non-English cases have limited support and exclude troubleshooting requests.</p>
             </div>
