--- a/mobile-apps/mobile-docs/mobile-docs.html
+++ b/mobile-apps/mobile-docs/mobile-docs.html
@@ -60,17 +60,17 @@
                 <li>When used, the bottom navigation bar appears at the bottom of every screen.</li>
                 <li>Bottom navigation bar destinations should be of equal importance. </li>
               </ul>
-              <h5>Bottom navigation should be used for</h5>
+              <h5>Bottom navigation should be used for:</h5>
               <ul>
-                <li>Top-level destinations that need to be accessible from anywhere in the app</li>
-                <li>Three to five destinations</li>
+                <li>Top-level destinations that need to be accessible from anywhere in the app.</li>
+                <li>Three to five destinations.</li>
               </ul>
-              <h5>Bottom navigation shouldn’t be used for</h5>
+              <h5>Bottom navigation shouldn’t be used for:</h5>
               <ul>
-                <li>Single tasks, such as viewing a single email</li>
-                <li>User preferences or settings</li>
-                <li>Fewer than three destinations (use tabs instead)</li>
-                <li>More than five destinations. For those cases, try tabs or a navigation drawer</li>
+                <li>Single tasks, such as viewing a single email.</li>
+                <li>User preferences or settings.</li>
+                <li>Fewer than three destinations (use tabs instead).</li>
+                <li>More than five destinations. For those cases, try tabs or a navigation drawer.</li>
               </ul>
               <h5>Bottom Navigation destinations</h5>
               <p>The way bottom navigation destinations are represented can depend on how many are used:</p>
@@ -105,11 +105,11 @@
               <img src = "../../images/Scania_Demo_App_2.JPG" alt="Navigation Drawer" style="width:25%;height:25%;">
               <h5>Usage</h5>
               <p>Navigation drawers provide access to destinations and app functionality, such as switching accounts. They can either be permanently on-screen or controlled by a navigation menu icon.</p>
-              <h5>Navigation drawers are recommended for</h5>
+              <h5>Navigation drawers are recommended for:</h5>
               <ul>
-                <li>Apps with five or more top-level destinations</li>
-                <li>Apps with two or more levels of navigation hierarchy</li>
-                <li>Quick navigation between unrelated destinations</li>
+                <li>Apps with five or more top-level destinations.</li>
+                <li>Apps with two or more levels of navigation hierarchy.</li>
+                <li>Quick navigation between unrelated destinations.</li>
               </ul>
               <h5>Note</h5>
               <p>Avoid using a navigation drawer with other primary navigation components, such as a bottom navigation bar.</p>
@@ -134,7 +134,7 @@
                   <li>Use recognizable icons when conventions exist.</li>
                   <li>Don’t use the same icon to represent different primary destinations.</li>
                   <li>Don’t apply icons to some destinations and not others. Icons should be used for all destinations, or none.</li>
-                  <li>Don’t use dividers to separate individual destinations</li>
+                  <li>Don’t use dividers to separate individual destinations.</li>
                   <li>Use full-width dividers to separate groups of destinations.</li>
               </ul>
               <h2>Navigation Drawer Header </h2>
@@ -148,9 +148,9 @@
               <img src = "../../images/Scania_Demo_App_3.JPG" alt="Tab Layout" style="width:25%;height:25%;">
               <h5>Tab Principles</h5>
               <ul>
-                  <li>As tabs can horizontally scroll, a UI can have as many tabs as needed.</li>
+                  <li>As tabs can scroll horizontally, a UI can have as many tabs as needed.</li>
                   <li>Tabs organize content into categories to help users easily find different types of information.</li>
-                  <li>Tabs are displayed next to each other as peers, in categories of equal importance</li>
+                  <li>Tabs are displayed next to each other as peers, in categories of equal importance.</li>
               </ul>
               <h5>Active tab indicators</h5>
               <p>To differentiate an active tab from an inactive tab, apply an underline <b>(Scania Red)</b> and color change <b>(Scania Blue)</b> to the active tab’s text and icon.</p>
@@ -164,9 +164,9 @@
               </ul>
               <h5>Gestures occur differently for each type of tab:</h5>
               <ul>
-                  <li>Fixed tabs don’t respond to the swipe gesture at all</li>
-                  <li>Upon swipe, scrollable tabs scroll independent of the content area</li>
-                  <li>Avoid placing swipeable items in the content area of a UI that has tabs, as the user may mistakenly swipe the wrong component.</li>
+                  <li>Fixed tabs don’t respond to the swipe gesture at all.</li>
+                  <li>Upon swipe, scrollable tabs scroll independent of the content area.</li>
+                  <li>Avoid placing swipeable items in the content area of a UI that has tabs, as the user may swipe the wrong component by mistake.</li>
               </ul>
               <h5>Tab layout</h5>
               <p>Tabs are displayed in a single row, with each tab connected to the content it represents. As a set, all tabs are unified by a shared topic.</p>
@@ -196,7 +196,7 @@
               <h2>Login Form</h2>
               <img src = "../../images/Scania_Demo_App_6.JPG" alt="Login Form" style="width:25%;height:25%;">
               <h5>Usage</h5>
-              <p>It is mandatory (Scania internal Apps) that you follow  the login form provided with this app if you application is intended to have Login/Logout. </p>
+              <p>It is mandatory (Scania internal Apps) that you follow  the login form provided with this app if your application is intended to have Login/Logout. </p>
               <h2>Splash Screen</h2>
               <p>Splash Screen is often referred to a welcome screen or user’s first experience of an application. </p>
               <img src = "../../images/Scania_Demo_App_7.JPG" alt="Splash Screen" style="width:25%;height:25%;">
