Rearranged menu, fixed table page
- Added correct items in the menu
- Removed some unnecessary files 
- Removed unused tables

--- a/developer/contact-us.html
+++ b/developer/contact-us.html
@@ -28,9 +28,7 @@
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
-  
   <c-main-content>
-
     <c-main-navigation>
       <primary-items>
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
@@ -41,19 +39,20 @@
             <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
             <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
           </sub-navigation>
-        </nav-item>              
+        </nav-item>
         <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
           <sub-navigation caption="Web Applications">
             <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
             <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>            
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" >Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
             <nav-item location="/corporate-ui-docs/developer/contact-us.html" class="active">Contact Us</nav-item>
           </sub-navigation>
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
     </c-main-navigation>
-
 
     <section>
       <article>
@@ -69,7 +68,6 @@
       </article>
     </section>
   </c-main-content>
-  
   <c-corporate-footer></c-corporate-footer>
 
   <script src="/corporate-ui-docs/js/ux-lib.js"></script>
