--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script> 
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
-  <!--   <script src="https://static.scania.com/build/global/2.5.0-CF/js/corporate-ui.js"></script> -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
 
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
   <style>
@@ -26,12 +25,12 @@
     }
 
     .page-header h1, .page-header h2, .page-header h3 {
-        text-align: center; 
+        text-align: center;
     }
 
     .page-header {
       margin: 0 auto;
-    }    
+    }
 
 </style>
 </head>
@@ -59,18 +58,15 @@
           <sub-navigation caption="Web Applications">
             <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
             <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" >Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
           </sub-navigation>
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
     </c-main-navigation>
-
-    <style>
-    
-    </style>
 
     <section class="light ux-sections">
       <div class="container text-center page-header">
@@ -82,7 +78,7 @@
             <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
             <h4 class="">UX Design Patterns</h4>
             <p>If you're a UX Designer please pick the correct patterns from the <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Corporate UI Design System</a>.</p>
-          </div>     
+          </div>
 <!--           <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="component/"><img src="/corporate-ui-docs/images/web-components.svg"></a>
             <h4 class="">Web Components</h4>
@@ -92,10 +88,10 @@
             <a href="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html"><img src="/corporate-ui-docs/images/bootstrap-labs.svg"></a>
             <h4 class="">HTML Samples</h4>
             <p>In the <a href="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html">HTML Copy and Paste section</a> developers will be able to download code samples that for sure will save a lot of time. This section is in the Dev Zone, using the latest web technology.</p>
-          </div>           
+          </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html"><img src="/corporate-ui-docs/images/scania-bootstrap.svg"></a>
-            <h4 class="">Scania Bootstrap</h4>          
+            <h4 class="">Scania Bootstrap</h4>
             <p>Scania Bootstrap is the HTML/CSS framework for implementing web applications at Scania. Basically, you can use all <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Bootstrap Classes and Components</a>. 
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
@@ -107,8 +103,8 @@
             <a href="/corporate-ui-docs/styleguide/"><img src="/corporate-ui-docs/images/styleguide.svg"></a>
             <h4 class="">Styleguide</h4>
             <p>In the styleguide you'll find out more about how to use the new <a href="/corporate-ui-docs/icons/">icons</a>, <a href="/corporate-ui-docs/typography/">typography</a> and  <a href="/corporate-ui-docs/logotype/">logotype</a> in web based applications. They are all included in the <a href="/corporate-ui-docs/developer/">Corporate UI Design System</a>.</p>
-          </div>         
-        </div>        
+          </div>
+        </div>
       </div>
     </section>
   </c-main-content>
