--- a/developer/bootstrap-original-docs.html
+++ b/developer/bootstrap-original-docs.html
@@ -154,8 +154,10 @@ $(function(){
       <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
         <sub-navigation caption="Web Applications">
           <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
-          <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>   
+          <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
           <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" class="active">Scania Bootstrap</nav-item>
+          <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
+          <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
           <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
         </sub-navigation>
       </nav-item>
