--- a/developer/faq.html
+++ b/developer/faq.html
@@ -6,11 +6,11 @@
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
   <title>UX Library - Developers</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
+  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js?monitoring=true"></script>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
 
 
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
@@ -26,7 +26,7 @@
         float: right;
         margin-top: -8px;
         letter-spacing: normal;
-    }    
+    }
 
     div[type="faq"].panel-group {
         margin-bottom: 20px;
@@ -52,7 +52,7 @@
     div[type="faq"].panel-group .panel .panel-heading {
         border: none;
         background: #0000;
-        padding-left: 0;  
+        padding-left: 0;
     }
 
     div[type="faq"].panel-group .panel-title > a {
@@ -76,7 +76,7 @@
 
     div[type="faq"].panel-group .panel + .panel {
         margin-top: 0;
-    }    
+    }
 
     div[type="faq"].panel-group .panel-default > .panel-heading + .panel-collapse > .panel-body {
         border-top-color: #0000;
@@ -107,9 +107,6 @@
         transform:rotate(180deg);
     }
 
-
-
-
     article p a,
     p a {
         font-family: inherit;
@@ -127,7 +124,7 @@
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
-  
+
   <c-main-content>
 
     <c-main-navigation>
@@ -140,14 +137,15 @@
             <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
             <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
           </sub-navigation>
-        </nav-item>             
+        </nav-item>
         <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
           <sub-navigation caption="Web Applications">
             <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
             <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
             <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/developer/faq.html" class="active">FAQ</nav-item>
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
           </sub-navigation>
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
@@ -237,7 +235,7 @@
                   </p>
                 </div>
               </div>
-            </div> 
+            </div>
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingSix">
                 <h4 class="panel-title">
@@ -278,15 +276,15 @@
                         <td>bootstrap-navtive.js<br/>polymer.js</td>
                         <td>bootstrap-org.css<br/>scania-logotype.css<br/>scania-fonts.css<br/>font-awesome.css<br/>core.css<br/>icons.css</td>
                         <td>Show <a href="https://legend.scania.com/build/global/3.5.3/css/corporate-ui.css">ver 3.5.3 CSS file</a>.<br/><a href="https://scania.com/ux-library">View Documentation</a></td></td>
-                      </tr> 
+                      </tr>
                     </tbody>
-                </table>
+                  </table>
                 </div>
               </div>
-            </div>                       
+            </div>
           </div>
         </article>
-      </div>  
+      </div>
     </section>
   </c-main-content>
   <c-corporate-footer></c-corporate-footer>
