--- a/developer/index.html
+++ b/developer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-GB" class="corporate-ui">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
@@ -9,11 +9,11 @@
   <title>UX Library - Developers</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
+  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js?monitoring=true"></script>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
 
 
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
@@ -24,7 +24,7 @@
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
-  
+
   <c-main-content>
     <c-main-navigation>
       <primary-items>
@@ -36,14 +36,15 @@
             <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
             <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
           </sub-navigation>
-        </nav-item>            
+        </nav-item>
         <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
           <sub-navigation caption="Web Applications">
             <nav-item location="/corporate-ui-docs/developer/" class="active">Corporate UI</nav-item>
             <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>            
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
           </sub-navigation>
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
@@ -67,10 +68,6 @@
           <h2>Latest Version</h2>
           <p>We're aiming at doing weekley releases and usually the UX Library is the first site to run the latest stable version. Currently, you'll get all the latest updates by including this file on your page:</p>
           <p class="text-info">https://static.scania.com/build/global/3.5.3/js/corporate-ui.js</p>
-<!-- <div>
-  <h2>Browser Support</h2>
-  <ul class="Grid Grid--guttersLg Grid--justifyCenter"><li class="Grid-cell Grid-cell--autoSize"><div class="Browser Browser--chrome" title="Since 2012-07-31"><figure class="Browser-image"></figure>Chrome<br>21+</div></li><li class="Grid-cell Grid-cell--autoSize"><div class="Browser Browser--opera" title="Since 2012-11-05"><figure class="Browser-image"></figure>Opera<br>12.1+</div></li><li class="Grid-cell Grid-cell--autoSize"><div class="Browser Browser--firefox" title="Since 2013-06-25"><figure class="Browser-image"></figure>Firefox<br>22+</div></li><li class="Grid-cell Grid-cell--autoSize"><div class="Browser Browser--safari" title="Since 2013-06-11"><figure class="Browser-image"></figure>Safari<br>6.1+</div></li><li class="Grid-cell Grid-cell--autoSize"><div class="Browser Browser--ie" title="Since 2012-09-04"><figure class="Browser-image"></figure>IE<br>10+</div></li><li class="Grid-cell Grid-cell--autoSize"><div class="Browser Browser--edge" title="Since 2015-03-15"><figure class="Browser-image"></figure>Edge<br>All</div></li></ul><h3 class="Section-heading">Caveats and Known Issues</h3><ul class="Section-list"><li>IE 10 has Flexbox support but for a <a href="http://www.w3.org/TR/2012/WD-css3-flexbox-20120322/">draft version</a> of the current spec: (<code>display:flexbox</code>).</li><li>Safari 6 and earlier support the <a href="http://www.w3.org/TR/2009/WD-css3-flexbox-20090723/">original</a> Flexbox syntax, which is now obsolete: (<code>display:box</code>).</li><li>Firefox 27 and earlier do not support multi-line flexboxes. See <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=702508">this bug</a> for more details.</li><li>For a full browser support comparison, check out <a href="http://caniuse.com/flexbox">caniuse.com/flexbox</a></li></ul>
-</div> -->
 
           <h2>Ground-breaking improvement in Scania's reuse approach</h2>
           <p>With Custom Elements (a part of the Web Components standard) Scania developers and partner companies can use functionality "off the shelf", create new HTML tags or extend the components other developers have created.</p>
@@ -95,24 +92,23 @@
             <li><a href="https://www.youtube.com/playlist?list=PL7029EEFC21D2DC58" target="_blank">An introduction to Standard Bootstrap (YouTube videos)</a></li>
           </ul>
 
+          <h3>Basic knowledge of Web Components and Google Polymer</h3>
+          <p>Using Web Components is so easy it is almost beyond imagination. Although, you will benefit from spending some time reading up on the basic ideas. Here's a few links to start out at:</p>
+          <ul>
+            <li><a href="https://meowni.ca/posts/polymer-cheatsheet/">Polymer Cheatsheet</a></li>
+            <li><a href="https://blog.revillweb.com/why-web-components-are-so-important-66ad0bd4807a#.dyerfqvci" target="_blank">Why Web Components are so important</a></li>
+            <li><a href="https://developers.google.com/web/fundamentals/getting-started/primers/customelements" target="_blank">Custom Elements v1: Reusable Web Components</a></li>
+            <li><a href="https://www.polymer-project.org/1.0/start/" target="_blank">Get started with Google Polymer</a></li>
+          </ul>
+        </div>
+      </article>
+    </section>
+  </c-main-content>
 
-            <h3>Basic knowledge of Web Components and Google Polymer</h3>
-            <p>Using Web Components is so easy it is almost beyond imagination. Although, you will benefit from spending some time reading up on the basic ideas. Here's a few links to start out at:</p>
-            <ul>
-              <li><a href="https://meowni.ca/posts/polymer-cheatsheet/">Polymer Cheatsheet</a></li>
-              <!--             <li><a href="https://meowni.ca/posts/polymer-2-cheatsheet/">Polymer2 Cheatsheet</a></li>     -->        
-              <li><a href="https://blog.revillweb.com/why-web-components-are-so-important-66ad0bd4807a#.dyerfqvci" target="_blank">Why Web Components are so important</a></li>
-              <li><a href="https://developers.google.com/web/fundamentals/getting-started/primers/customelements" target="_blank">Custom Elements v1: Reusable Web Components</a></li>
-              <li><a href="https://www.polymer-project.org/1.0/start/" target="_blank">Get started with Google Polymer</a></li>
-            </ul>
-          </article>
-        </section>
-      </c-main-content>
+  <c-corporate-footer></c-corporate-footer>
 
-      <c-corporate-footer></c-corporate-footer>
+  <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 
-      <script src="/corporate-ui-docs/js/ux-lib.js"></script>
-
-    </body>
-    </html>
+</body>
+</html>
 
