--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en-GB" class="corporate-ui">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <noscript>
     <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
@@ -10,14 +10,11 @@
 
   <title>Scania Corporate UI - Style Guide</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
+  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
-
-
-
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
   <style>
     .ux-sections img {
       width: auto;
@@ -29,12 +26,11 @@
 
     @media (max-width: 991px) {
       .ux-sections img {
-        width:40%
+        width:40%;
         height: 40%;
       }
     }
     .row .col-md-4:nth-child(4) {clear:left;}
-    
   </style>
 
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
@@ -42,13 +38,12 @@
 
 <body class="scania">
 
-<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-      <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
-  <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
-</c-corporate-header>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
+    <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+  </c-corporate-header>
 
-<c-main-content>
-
+  <c-main-content>
     <c-main-navigation>
       <primary-items>
           <nav-item location="/corporate-ui-docs/">Home</nav-item>
@@ -59,72 +54,73 @@
             <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
             <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
           </sub-navigation>
-          </nav-item>            
+          </nav-item>
           <nav-item location="/corporate-ui-docs/developer/">Web Applications
             <sub-navigation caption="Web Applications">
               <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
               <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-              <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
+              <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" >Scania Bootstrap</nav-item>
+              <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
               <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+              <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
             </sub-navigation>
           </nav-item>
-          <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>          
+          <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
     </c-main-navigation>
 
-  <section class="light ux-sections">
-    <div class="container text-center">
-      <h1>Style Guide</h1>
-      <p>The rules and guidelines shown in this styleguide are mostly built into the Corporate UI stylesheet. Using the pre built components will enable you to focus on other parts of your project rather than spending time with code and requirements that's already developed.</p>
-      <p>Although, in this section you'll find in depth information about why our components currently look like they do.</p>      
+    <section class="light ux-sections">
+      <div class="container text-center">
+        <h1>Style Guide</h1>
+        <p>The rules and guidelines shown in this styleguide are mostly built into the Corporate UI stylesheet. Using the pre built components will enable you to focus on other parts of your project rather than spending time with code and requirements that's already developed.</p>
+        <p>Although, in this section you'll find in depth information about why our components currently look like they do.</p>
 
-      <div class="row">
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="/corporate-ui-docs/logotype/"><img src="/corporate-ui-docs/images/logotype.svg"></a>
-          <h4>Logotype</h4>
-          <p>The logotype is now divided into the wordmark and the symbol. Find out what CSS classes to use where and when to display the <a href="../logotype/">logotype</a> in web based applications.</p>
+        <div class="row">
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="/corporate-ui-docs/logotype/"><img src="/corporate-ui-docs/images/logotype.svg"></a>
+            <h4>Logotype</h4>
+            <p>The logotype is now divided into the wordmark and the symbol. Find out what CSS classes to use where and when to display the <a href="../logotype/">logotype</a> in web based applications.</p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="../icons/"><img src="/corporate-ui-docs/images/icons.svg"></a>
+            <h4>Icons</h4>
+            <p>Each of the Scania Icons are available in 2 different sizes, 2 different colours and in 3 diffent file formats. For the modern web, please use the icon stylesheet and in other cases the SVG version.</p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="../colours/"><img src="/corporate-ui-docs/images/palette.svg"></a>
+            <h4>Colours</h4>
+            <p>The new Scania Colours are now divided into a brand, primary, secondary and tertiary palette. Find out what LESS variables and CSS classes to <a href="../colours/">use where and when</a>.</p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="../typography/"><img src="/corporate-ui-docs/images/typography.svg"></a>
+            <h4>Typography</h4>
+            <p>In the <a href="../typography/">typography</a> section you'll find out the most important things to know about the Scania Sans typeface and what cuts are available, as well as when to use them.</p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="../mobile-apps/"><img src="/corporate-ui-docs/images/interaction.svg"></a>
+            <h4>Mobile Apps</h4>
+            <p>Developing a native mobile application differs from developing for the web. For mobile apps, please use our additional <a href="../mobile-apps/">guidelines and templates</a>.</p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="/corporate-ui-docs/styleguide/Scania Identity Manual_201609.pdf" target="_blank"><img src="/corporate-ui-docs/images/identity-manual.svg"></a>
+            <h4 class="">Identity Manual</h4>
+            <p>Whatever design elements from the UX Library that you're going to use, please see to it that it follows the guidelines found in the <a href="/corporate-ui-docs/styleguide/Scania Identity Manual_201609.pdf" target="_blank">Scania Identity Manual</a> as it is this manual that is reflected in the UX Library.</p>
+          </div>
+
         </div>
+      </div>
+    </section>
+  </c-main-content>
 
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="../icons/"><img src="/corporate-ui-docs/images/icons.svg"></a>
-          <h4>Icons</h4>
-          <p>Each of the Scania Icons are available in 2 different sizes, 2 different colours and in 3 diffent file formats. For the modern web, please use the icon stylesheet and in other cases the SVG version.</p>
-        </div>         
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="../colours/"><img src="/corporate-ui-docs/images/palette.svg"></a>
-          <h4>Colours</h4>
-          <p>The new Scania Colours are now divided into a brand, primary, secondary and tertiary palette. Find out what LESS variables and CSS classes to <a href="../colours/">use where and when</a>.</p>
-        </div>          
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="../typography/"><img src="/corporate-ui-docs/images/typography.svg"></a>
-          <h4>Typography</h4>
-          <p>In the <a href="../typography/">typography</a> section you'll find out the most important things to know about the Scania Sans typeface and what cuts are available, as well as when to use them.</p>
-        </div>
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="../mobile-apps/"><img src="/corporate-ui-docs/images/interaction.svg"></a>
-          <h4>Mobile Apps</h4>
-          <p>Developing a native mobile application differs from developing for the web. For mobile apps, please use our additional <a href="../mobile-apps/">guidelines and templates</a>.</p>
-        </div>  
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="/corporate-ui-docs/styleguide/Scania Identity Manual_201609.pdf" target="_blank"><img src="/corporate-ui-docs/images/identity-manual.svg"></a>
-          <h4 class="">Identity Manual</h4>
-          <p>Whatever design elements from the UX Library that you're going to use, please see to it that it follows the guidelines found in the <a href="/corporate-ui-docs/styleguide/Scania Identity Manual_201609.pdf" target="_blank">Scania Identity Manual</a> as it is this manual that is reflected in the UX Library.</p>
-        </div>           
-
-      </div>        
-    </div>
-  </section>
-</c-main-content>
-
-<c-corporate-footer>
+  <c-corporate-footer>
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
     <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
   </c-corporate-footer>
-
   <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 </body>
 </html>
