Web application section is in app mode
- Changed to app mode in application
- Removed a lot of files that aren't used

--- a/developer/contact-us.html
+++ b/developer/contact-us.html
@@ -22,7 +22,8 @@
 
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
 </head>
-<body class="scania">
+<!-- Need light for both body and section to make it match -->
+<body class="scania app light">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
@@ -54,7 +55,7 @@
       </primary-items>
     </c-main-navigation>
 
-    <section>
+    <section class="light">
       <article>
         <div class="container">
           <h1>Poke a fellow developer</h1>
