--- a/developer/faq.html
+++ b/developer/faq.html
@@ -118,7 +118,7 @@
   </style>
 
 </head>
-<body class="scania">
+<body class="scania app">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
@@ -152,7 +152,7 @@
       </primary-items>
     </c-main-navigation>
 
-    <section>
+    <section class="light">
       <div class="container">
         <article>
            <!-- accordion template -->
