--- a/developer/index.html
+++ b/developer/index.html
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
 </head>
-<body class="scania">
+<body class="scania app">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
