--- a/developer/corporate-ui-for-frameworks.html
+++ b/developer/corporate-ui-for-frameworks.html
@@ -16,7 +16,7 @@
 
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
 </head>
-<body class="scania">
+<body class="scania app">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
@@ -38,8 +38,8 @@
         <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
           <sub-navigation caption="Web Applications">
             <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" class="active">Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html" class="active">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
             <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
             <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
