--- a/developer/extended-tables.html
+++ b/developer/extended-tables.html
@@ -63,16 +63,18 @@
             <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
             <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
           </sub-navigation>
-        </nav-item>              
-        <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" class="active">Web Applications
-          <sub-navigation caption="Scania Bootstrap">
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Bootstrap Documentation</nav-item>
-            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html">HTML Copy Paste</nav-item>
-          </sub-navigation>  
+        </nav-item>
+        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
+          <sub-navigation caption="Web Applications">
+            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" >Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+          </sub-navigation>
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
-        <nav-item location="https://github.com/scania/corporate-ui/issues">Report an Issue</nav-item>
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
       </primary-items>
     </c-main-navigation>
 
@@ -1805,130 +1807,6 @@
                     </table>
                   </div>
                 </div>
-<!-- 
-                <div class="row">
-                  <div class="col-md-12 col-sm-12">
-                    <h2>.table.tablesorter.table-filterable (dependent on the Tablesorter plugin)</h2>
-                    <table class="table tablesorter table-filterable">
-                        <thead>
-                          <tr>
-                            <th>#</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>Username</th>
-                            <th>text</th>
-                            <th>text2</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td>1</td>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                            <td>@mdo</td>
-                            <td>@mdo</td>
-                          </tr>
-                          <tr>
-                            <td>2</td>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                          <tr>
-                            <td>3</td>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                          <tr>
-                            <td>7</td>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                          <tr>
-                            <td>7</td>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                            <tr>
-                            <td>7</td>
-                            <td>Jacob</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                            <tr>
-                            <td>5</td>
-                            <td>varry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                            <tr>
-                            <td>7</td>
-                            <td>varry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                            <tr>
-                            <td>3</td>
-                            <td>varry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                            <tr>
-                            <td>3</td>
-                            <td>berry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                            <tr>
-                            <td>3</td>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                            <tr>
-                            <td>2</td>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                            <tr>
-                            <td>9</td>
-                            <td>Arry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                        </tbody>
-                    </table>
-                  </div>
-                </div> -->
 
               </div>
             </div>
