--- a/styleguide/logotypes/index.html
+++ b/styleguide/logotypes/index.html
@@ -25,10 +25,20 @@
   </c-corporate-header>
 
   <c-main-content>
-
     <c-main-navigation>
       <primary-items>
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/">Corporate UI
+          <sub-navigation caption="Corporate UI">
+            <nav-item location="/corporate-ui-docs/developer/">About</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/html-copy-paste/html-copy-paste.html">HTML copy paste</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+          </sub-navigation>
+        </nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/" class="active">Style Guide
           <sub-navigation caption="Style Guide">
             <nav-item location="/corporate-ui-docs/styleguide/logotypes/" class="active">Logotype</nav-item>
@@ -36,36 +46,28 @@
             <nav-item location="/corporate-ui-docs/styleguide/colours/">Colours</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/typography/">Typography</nav-item>
           </sub-navigation>
-        </nav-item>            
-        <nav-item location="/corporate-ui-docs/developer/">Web Applications
-          <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
-          </sub-navigation>
         </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
-    </c-main-navigation>    
 
-  
+      <secondary-items>
+        <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors</a></nav-item>
+      </secondary-items>
+    </c-main-navigation>
 
-<section>
-  <article>
-    <div class="container">
-    <h1>Logotype</h1>
-    <p>For print usage, the Scania logotype (symbol and wordmark) is supplied by <a href="https://media.scania.com/fotoweb/">Scania Media Provider</a>. For web application development, the symbol and wordmark are included among our ready to run <a href="../component/">web components</a>.</p>
-    <h2>For Web Usage</h2>
-    <p>For use in applications where we can't use either <a href="../component/">Polymer web components</a> or the  <a href="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</a> framework. The <a href="https://static.scania.com/resources/logotype/scania/logotype-stylesheet/scania-logotype.css" download>Scania logotype stylesheet</a> includes both scalable SVG versions as well as PNG fallback versions and are already included and available in the Corporate UI.</p>
-    <h2>Social Media</h2>
-    <p>If you are running a Scania channel in social media and need the Scania Symbol for the profile page, feel free to download the <a href="https://static.scania.com/resources/logotype/scania/social-media/scania-social-media-logotypes.zip" download>Scania social media symbols</a>. There are a few versions available including <a href="https://www.facebook.com/scaniagroup" target="_blank">Facebook</a>, <a href="https://www.instagram.com/scaniagroup/" target="_blank">Instragram</a>, <a href="https://twitter.com/scaniagroup" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/company/scania" target="_blank">LinkedIn</a> and <a href="https://www.youtube.com/user/ScaniaGroup" target="_blank">YouTube</a>.</p>
-    <h2>Need help?</h2>
-    <p>If you have any questions regarding of how the symbol and wordmark should be used on the web, please <a href="mailto:corporate-ui@scania.com">send us an e-mail</a> and we'll be happy to help out.</p>
-    </div>
+  <section>
+    <article>
+      <div class="container">
+        <h1>Logotype</h1>
+        <p>For print usage, the Scania logotype (symbol and wordmark) is supplied by <a href="https://media.scania.com/fotoweb/">Scania Media Provider</a>. For web application development, the symbol and wordmark are included among our ready to run <a href="../component/">web components</a>.</p>
+        <h2>For Web Usage</h2>
+        <p>For use in applications where we can't use either <a href="../component/">Polymer web components</a> or the  <a href="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</a> framework. The <a href="https://static.scania.com/resources/logotype/scania/logotype-stylesheet/scania-logotype.css" download>Scania logotype stylesheet</a> includes both scalable SVG versions as well as PNG fallback versions and are already included and available in the Corporate UI.</p>
+        <h2>Social Media</h2>
+        <p>If you are running a Scania channel in social media and need the Scania Symbol for the profile page, feel free to download the <a href="https://static.scania.com/resources/logotype/scania/social-media/scania-social-media-logotypes.zip" download>Scania social media symbols</a>. There are a few versions available including <a href="https://www.facebook.com/scaniagroup" target="_blank">Facebook</a>, <a href="https://www.instagram.com/scaniagroup/" target="_blank">Instragram</a>, <a href="https://twitter.com/scaniagroup" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/company/scania" target="_blank">LinkedIn</a> and <a href="https://www.youtube.com/user/ScaniaGroup" target="_blank">YouTube</a>.</p>
+        <h2>Need help?</h2>
+        <p>If you have any questions regarding of how the symbol and wordmark should be used on the web, please <a href="mailto:corporate-ui@scania.com">send us an e-mail</a> and we'll be happy to help out.</p>
+      </div>
     </article>
-</section>
+  </section>
 
   </c-main-content>
   <c-corporate-footer></c-corporate-footer>
