- Added home link for index page - Changed image, still need some css rules for fit

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
           <sub-navigation caption="Style Guide">
+            <nav-item location="/corporate-ui-docs/styleguide/">Home</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/logotypes/">Logotype</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/icons/">Icons</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/colours/">Colours</nav-item>
@@ -67,7 +68,7 @@
       </primary-items>
 
       <secondary-items>
-          <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors</a></nav-item>
+        <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors</a></nav-item>
       </secondary-items>
     </c-main-navigation>
 
@@ -83,8 +84,8 @@
             <p>If you're a UI Designer please pick the correct patterns from the <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Corporate UI Design System</a>.</p>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
-            <!-- <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/interaction.svg"></a> -->
+            <!-- <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a> -->
+            <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/interaction.svg"></a>
             <h4>Mobile Apps</h4>
             <p>Developing a native mobile application differs from developing for the web.</p>
           </div>
