Moved parts of the extended docs into a new folder
- Moved parts of the extended docs into a new folder
- Fixed issue with image in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
             <!-- <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a> -->
-            <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/interaction.svg"></a>
+            <a href="/corporate-ui-docs/mobile-apps/"><img class="mobile-apps" src="/corporate-ui-docs/images/interaction.svg"></a>
             <h4>Mobile Apps</h4>
             <p>Developing a native mobile application differs from developing for the web.</p>
           </div>
